--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,7 @@
         <div class="section" id="contact">
             <img src="{{  url_for('static', filename='mail.png' )  }}" alt="mail" class="isometric"></img>
             <h2>Get in touch!</h2> <br>
-            <form action="input" class="pageclip-form" method="post">
+            <form action="/" class="pageclip-form" method="POST">
                 <label for="email"> Email:</label>
                 <input type="email" name="email" placeholder="required" required autocomplete="off">
                 <span class="underline"></span>
