--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{  url_for('static', filename='desktop.css' )  }}">
     <link rel="stylesheet" href="{{  url_for('static', filename='mobile.css' )  }}">
     <link rel="stylesheet" href="{{  url_for('static', filename='tablet.css' )  }}">
     <script src="https://kit.fontawesome.com/f895649843.js" crossorigin="anonymous"></script>
